indexページにcssを追加

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -1,11 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ja">
-
   <head>
     <title>To Do Application</title>
-    <meta charset="UTF-8">
-    <meta name="author" content="INIAD">
+    <meta charset="UTF-8" />
+    <meta name="author" content="INIAD" />
+    <link rel="stylesheet" href="{% static 'todo/index.css' %}" />
   </head>
 
   <body>
@@ -14,20 +14,25 @@
     <form action="{% url 'index' %}" method="post">
       {% csrf_token %}
       <div>
-        <label for="titleInput">Title</label><br>
-        <input id="titleInput" name="title" type="text" placeholder="Input title">
+        <label for="titleInput">Title</label><br />
+        <input
+          id="titleInput"
+          name="title"
+          type="text"
+          placeholder="Input title"
+        />
       </div>
       <div>
-        <label for="dueInput">Due at:</label><br>
-        <input id="dueInput" name="due_at" type="datetime-local">
+        <label for="dueInput">Due at:</label><br />
+        <input id="dueInput" name="due_at" type="datetime-local" />
       </div>
       <div>
         <button type="submit">Submit</button>
       </div>
     </form>
-    <br>
+    <br />
 
-    <div>
+    <div class="sort-links">
       <a href="{% url 'index' %}?order=due">Sort by Due Date</a> |
       <a href="{% url 'index' %}?order=post">Sort by Posted Date</a>
     </div>
@@ -37,17 +42,15 @@
       <h2><a href="{% url 'detail' task.id %}">{{ task.title }}</a></h2>
       <ul>
         <li>Posted at: {{ task.posted_at }}</li>
-        {% if task.due_at %} 
+        {% if task.due_at %}
         <li>Due at: {{ task.due_at }}</li>
-        {% endif %}
-        {% if task.completed %} 
-        <li>Status: Completed</li>
+        {% endif %} {% if task.completed %}
+        <li class="status-completed">Status: Completed</li>
         {% else %}
-        <li>Status: Not Completed</li>
+        <li class="status-not-completed">Status: Not Completed</li>
         {% endif %}
       </ul>
     </div>
     {% endfor %}
   </body>
-
 </html>
