--- a/todo/static/todo/index.css
+++ b/todo/static/todo/index.css
@@ -15,6 +15,16 @@ body {
   padding: 20px;
 }
 
+#header {
+  background-color: #17194c;
+  padding: 10px 20px 10px 20px;
+  height: 40px;
+}
+
+#header img {
+  height: 100%;
+}
+
 h1 {
   color: #333;
 }
