--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <div id="header">
+      <img src="{% static 'todo/img/iniad.png' %}" alt="Logo">
+    </div>
     <h1>Sample To Do Application</h1>
     <p>You can submit tasks from the following form.</p>
     <form action="{% url 'index' %}" method="post">
